EDU-1589 Fix icons not displayed on document edit panel on mobile

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -16,7 +16,7 @@
 }
 
 .m-icon-button {
-  &.ant-btn > span:not([role="img"]) {
+  &.ant-btn > span:not([class="ant-btn-icon"]) {
     @media @edu-media-phone {
       display: none;
     }
